# MediaCreator

./: .env.example  .gitignore  AGENTS.md  CODEX_BLOCKER.md  Makefile  PLANS.md  README.md  VERSION  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_initial_foundation.py  0002_jobs_and_history_foundation.py  0003_photosets_and_qc_foundation.py  0004_body_parameter_foundation.py  0005_pose_state_foundation.py  0006_facial_parameter_foundation.py  0007_model_registry_foundation.py  0008_service_heartbeats_foundation.py  0009_photoset_ingest_truth_and_buckets.py  0010_photoset_derivative_contract.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/db/: base.py  session.py  settings.py
apps/api/app/models/: __init__.py  actor.py  asset.py  body_parameters.py  facial_parameters.py  history_event.py  job.py  mixins.py  models_registry.py  photoset_entry.py  (+3 more)
apps/api/mediacreator_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: db_test_utils.py  photoset_test_utils.py  test_blender_export_api.py  test_body_api.py  test_character_creation_from_classified_photoset.py  test_characters_api.py  test_db_migrations.py  test_exports_api.py  test_face_api.py  test_generation_provider.py  test_generation_workspace_api.py  test_health.py  test_jobs_service.py  test_lora_capability_and_registry.py  test_lora_dataset_api.py  test_lora_dataset_manifest_contract.py  test_lora_dataset_selection.py  test_lora_proof_image_contract.py  test_lora_training_api.py  test_motion_library_api.py  test_photo_derivatives_and_manifests.py  test_photo_qc_calibration.py  test_photoset_job_progress.py  test_photosets_api.py  test_photosets_intake_and_classification.py  test_pose_api.py  test_reconstruction_api.py  test_saved_3d_output_contract.py  test_storage_service.py  test_system_runtime_api.py  test_texture_pipeline_api.py  test_video_render_api.py  test_wardrobe_api.py
apps/worker/: README.md  pyproject.toml
(+460 files in other folders)
