[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mediacreator-api"
version = "0.1.0"
description = "MediaCreator FastAPI bootstrap application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "mediapipe>=0.10,<1",
  "numpy>=2,<3",
  "opencv-python-headless>=4.13,<5",
  "pillow>=11,<12",
  "pydantic>=2.7,<3",
  "python-multipart>=0.0.9,<1",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["cv2", "mediapipe", "mediapipe.*", "numpy", "PIL"]
ignore_missing_imports = true
